# benchclaw

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  Conversation.md  LICENSE  README.md  TODO.md  awake-asleep-indicator-plan.md  core_agent_lines.sh  pyproject.toml  summon-attention-plan.md
.claude/: settings.json
benchclaw/: __init__.py  __main__.py  bus.py  config.py  media.py  session.py  utils.py
benchclaw/agent/: __init__.py  loop.py  skills.py  subagent.py
benchclaw/agent/context/: __init__.py  builder.py
benchclaw/agent/tools/: __init__.py  (+11 more)
benchclaw/channels/: __init__.py  attention.py  base.py  builtins.py  claude_code.py  manager.py  smtp_email.py  telegrm.py  whatsapp.py
benchclaw/providers/: __init__.py  base.py  litellm_provider.py  registry.py
bridge/: README.md  package-lock.json
bridge/src/: index.ts  server.ts  whatsapp.ts
nanobot/: TODOS  __init__.py  __main__.py  bus.py  config.py  session.py  utils.py
nanobot/agent/: __init__.py  context.py  loop.py  memory.py  subagent.py
nanobot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  slack.py  smtp_email.py  telegram.py  telegrm.py  whatsapp.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/heartbeat/: service.py
nanobot/providers/: base.py  litellm_provider.py  registry.py
nanobot/session/: manager.py
spec/: AUDIO.md  COMPACTION.md
tests/: test_agent_loop.py  test_channel_attention.py  test_context_builder.py  test_cron_serialization.py  test_email_channel.py  test_filesystem_tools.py  test_mcp_manager.py  test_media_paths.py  test_media_tools.py  test_message_tool.py  test_serialization.py  test_shell_tool.py  test_summon_filter.py  test_tool_validation.py
workspace/: AGENTS.md
workspace_default/: AGENTS.md  USER.md
workspace_default/cron/: jobs.json
workspace_default/memory/: MEMORY.md
(+35 files in other folders)
